[gd_scene format=3 uid="uid://572ad1efklon"]

[ext_resource type="Script" uid="uid://cg1dswyw2p1op" path="res://scenes/entities/enemy/enemy_character.gd" id="1_5jjyw"]
[ext_resource type="PackedScene" uid="uid://toum1olkwjmg" path="res://scenes/components/stamped_animated_sprite/shaded_animated_sprite_3d.tscn" id="1_qk6p8"]
[ext_resource type="Shader" uid="uid://dl6ampid6rth6" path="res://scenes/components/stamped_animated_sprite/shaded_animated_sprite_3d.gdshader" id="2_5jjyw"]
[ext_resource type="Texture2D" uid="uid://dn1mdtvrnxb6v" path="res://assets/tmp/paper_mario.png" id="3_flumg"]
[ext_resource type="Texture2D" uid="uid://ch1fj0j2vc2r1" path="res://resources/burn_noise_texture.tres" id="4_8gtkm"]
[ext_resource type="Texture2D" uid="uid://o34vnik8cwo4" path="res://assets/textures/paper/Paper003_1K-JPG_NormalGL.jpg" id="4_g10rj"]
[ext_resource type="Texture2D" uid="uid://dkbujjnpxwia0" path="res://assets/textures/paper/Paper003_1K-JPG_Roughness.jpg" id="5_8gtkm"]
[ext_resource type="Texture2D" uid="uid://4q335xxs2p" path="res://assets/tmp/icon.svg" id="6_ex3sn"]
[ext_resource type="Script" uid="uid://5kc8fyscu1dj" path="res://scenes/debug_worlds/gym/stampable.gd" id="7_46xen"]
[ext_resource type="Script" uid="uid://cqxuelwl2k4bg" path="res://scripts/attack_system/stats_component.gd" id="8_yp07s"]
[ext_resource type="Script" uid="uid://baffaklkbk27f" path="res://scripts/attack_system/hitbox_component.gd" id="9_2a0nr"]
[ext_resource type="Texture2D" uid="uid://bvav1abqdnltd" path="res://assets/tmp/carimbo.png" id="9_flumg"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ex3sn"]
viewport_path = NodePath("StampViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_46xen"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_5jjyw")
shader_parameter/roughness = 1.0
shader_parameter/metallic_texture_channel = Vector4(1, 0, 0, 0)
shader_parameter/texture_roughness = ExtResource("5_8gtkm")
shader_parameter/specular = 0.249999994412
shader_parameter/metallic = 0.0
shader_parameter/texture_normal = ExtResource("4_g10rj")
shader_parameter/normal_scale = 1.5600008340999985
shader_parameter/albedo = Color(1, 1, 1, 1)
shader_parameter/texture_albedo = ExtResource("3_flumg")
shader_parameter/texture_carimbo = SubResource("ViewportTexture_ex3sn")
shader_parameter/burn_texture = ExtResource("4_8gtkm")
shader_parameter/burn_amount = 0.0
shader_parameter/burn_size = 0.150000007125
shader_parameter/burn_smoothness = 0.1330000063175
shader_parameter/burn_glow_color = Color(1, 0.19607843, 0, 1)
shader_parameter/burn_glow_intensity = 10.0

[sub_resource type="SpriteFrames" id="SpriteFrames_yp07s"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ex3sn")
}, {
"duration": 1.0,
"texture": ExtResource("3_flumg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_porrh"]

[sub_resource type="GDScript" id="GDScript_aose2"]
resource_name = "label"
script/source = "extends Label3D

@onready var stats_component: StatsComponent = $\"../StatsComponent\"

@onready var health: int = self.stats_component.health: set = set_health
@onready var armor: int = self.stats_component.armor: set = set_armor


func _ready() -> void:
	_update_text()


func set_health(value: int) -> void:
	health = value
	_update_text()


func set_armor(value: int) -> void:
	armor = value
	_update_text()


func _update_text() -> void:
	set_text(\"PV: %s\\nPA: %s\" % [health, armor])
"

[node name="EnemyCharacter" type="CharacterBody3D" unique_id=327949729 node_paths=PackedStringArray("stampable_sprite")]
collision_layer = 3
script = ExtResource("1_5jjyw")
stampable_sprite = NodePath("ShadedAnimatedSprite3D")
metadata/_custom_type_script = "uid://cyhmlt377k3ye"

[node name="ShadedAnimatedSprite3D" parent="." unique_id=1952958561 instance=ExtResource("1_qk6p8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("ShaderMaterial_46xen")
sprite_frames = SubResource("SpriteFrames_yp07s")
script = ExtResource("7_46xen")
stamp_texture = ExtResource("9_flumg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1313853746]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_porrh")

[node name="StatsComponent" type="Node" parent="." unique_id=1300792285 node_paths=PackedStringArray("hitbox")]
script = ExtResource("8_yp07s")
hitbox = NodePath("../HitboxComponent")
max_health = 10
max_armor = 10
metadata/_custom_type_script = "uid://cqxuelwl2k4bg"

[node name="HitboxComponent" type="Area3D" parent="." unique_id=941104208 node_paths=PackedStringArray("actor")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 4
collision_mask = 0
script = ExtResource("9_2a0nr")
actor = NodePath("..")
metadata/_custom_type_script = "uid://baffaklkbk27f"

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent" unique_id=1124297260]
shape = SubResource("CapsuleShape3D_porrh")

[node name="Label3D" type="Label3D" parent="." unique_id=1693522910]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6481094, 0)
billboard = 1
text = "FILHO DA PUTA"
script = SubResource("GDScript_aose2")

[connection signal="armor_changed" from="StatsComponent" to="Label3D" method="set_armor"]
[connection signal="health_changed" from="StatsComponent" to="." method="_on_health_changed"]
[connection signal="health_changed" from="StatsComponent" to="Label3D" method="set_health"]
